--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
     - db_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: postgrespassword∑
+      POSTGRES_PASSWORD: postgrespassword
       PGGSSENCMODE: disable
       PGSSLMODE: disable
       PGREQUIRESSL: 0
