--- a/package.json
+++ b/package.json
@@ -1,35 +1,21 @@
 {
-  "name": "@deepcase/hasura",
+  "name": "example",
   "version": "0.0.2",
-  "license": "ISC",
-  "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
-  "homepage": "https://github.com/deepcase/hasura",
-  "repository": {
-    "type": "git",
-    "url": "ssh://git@github.com/deepcase/hasura.git"
-  },
-  "pre-commit": [
-    "build"
-  ],
-  "description": "",
-  "dependencies": {
-    "apollo-boost": "^0.4.9",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-ws": "^1.0.20",
-    "axios": "^0.21.1",
-    "debug": "^4.3.1",
-    "node-fetch": "^2.6.1"
-  },
+  "private": true,
   "scripts": {
-    "build": "npx tsc --project tsconfig.json",
-    "unbuild": "rm -f ./*.js && rm -f ./*.js.map",
-    "npm-publish": "npm run build && npm publish && npm run unbuild",
-    "docker-local": "sudo apt install net-tools && export DOCKERHOST=$(ifconfig | grep -E \"([0-9]{1,3}\\.){3}[0-9]{1,3}\" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1) && (cd ./local && docker-compose up -d)"
+    "dev": "next dev",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start",
+    "gh-pages": "npm run build && npm run export && rm -rf ../hasura-gh-pages/* && mv ./out/* ../hasura-gh-pages/ && rm -rf out"
+  },
+  "dependencies": {
+    "@deepcase/hasura": "^0.0.2",
+    "next": "10.0.7",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^14.0.23",
-    "pre-commit": "^1.2.2",
-    "typescript": "^3.9.7"
+    "@types/react": "^17.0.2"
   }
 }
