--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-ws": "^1.0.20",
+    "apollo-server-express": "^2.21.0",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "debug": "^4.3.1",
+    "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   },
   "scripts": {
