--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@deepcase/hasura": "^0.0.2",
+    "apollo-boost": "^0.4.9",
+    "apollo-server": "^2.21.0",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
