--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -30,6 +30,6 @@ services:
       HASURA_GRAPHQL_DEV_MODE: "true"
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-      # HASURA_GRAPHQL_AUTH_HOOK: http://dockerhost:4000/api/auth/bearer
+      HASURA_GRAPHQL_AUTH_HOOK: "${AUTH_WEBHOOK}"
 volumes:
   db_data:
