--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-ws": "^1.0.20",
-    "apollo-server-express": "^2.21.0",
+    "apollo-server-micro": "^2.21.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
