--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deepcase/hasura",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "ISC",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deepcase/hasura",
@@ -27,7 +27,7 @@
   "scripts": {
     "package:build": "npx tsc --project tsconfig.json",
     "package:unbuild": "rm -f ./*.js && rm -f ./*.js.map",
-    "package:publish": "npm run build && npm publish && npm run unbuild",
+    "package:publish": "npm run package:build && npm publish && npm run package:unbuild",
     "docker-local": "(sudo apt install net-tools && export DOCKERHOST=$(ifconfig | grep -E \"([0-9]{1,3}\\.){3}[0-9]{1,3}\" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1) && cd ./local && docker-compose up -d)"
   },
   "devDependencies": {
