--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "apollo-link-ws": "^1.0.20",
     "apollo-server-micro": "^2.21.0",
     "axios": "^0.21.1",
+    "babel-register": "^6.26.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "migrate": "^1.7.0",
+    "node-fetch": "^2.6.1",
+    "ts-node": "^9.1.1"
   },
   "scripts": {
     "package:build": "npx tsc --project tsconfig.json",
