--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
   },
   "scripts": {
     "package:build": "npx tsc --project tsconfig.json",
-    "package:unbuild": "rm -f ./*.js && rm -f ./*.js.map",
-    "package:publish": "npm run package:build && npm publish && npm run package:unbuild",
-    "docker-local": "(sudo apt install net-tools && export DOCKERHOST=$(ifconfig | grep -E \"([0-9]{1,3}\\.){3}[0-9]{1,3}\" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1) && cd ./local && docker-compose up -d)"
+    "package:unbuild": "rm -f ./*.js; rm -f ./*.js.map",
+    "package:publish": "npm run package:build; npm publish; npm run package:unbuild",
+    "docker-local": "(sudo apt install net-tools; export DOCKERHOST=$(ifconfig | grep -E \"([0-9]{1,3}\\.){3}[0-9]{1,3}\" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1); cd ./local; docker-compose up -d)",
+    "screen": "(export $(grep -v '^#' .env | xargs); npm run docker-local)"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
