--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p $PORT",
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "gh-pages": "npm run build && npm run export && rm -rf ../hasura-gh-pages/* && mv ./out/* ../hasura-gh-pages/ && rm -rf out"
+    "gh-pages": "npm run build; npm run export; rm -rf ../hasura-gh-pages/*; mv ./out/* ../hasura-gh-pages/; rm -rf out",
+    "migrate": "yes | DEBUG='*' npx migrate up --compiler='ts:@deepcase/hasura/compiler/index.js'",
+    "unmigrate": "yes | DEBUG='*' npx migrate down --compiler='ts:@deepcase/hasura/compiler/index.js'",
+    "screen": "export $(grep -v '^#' .env | xargs); npm run migrate; npm run dev"
   },
   "dependencies": {
     "@deepcase/hasura": "^0.0.3",
