--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "gh-pages": "npm run build; npm run export; rm -rf ../hasura-gh-pages/*; mv ./out/* ../hasura-gh-pages/; rm -rf out",
     "migrate": "export $(grep -v '^#' .env | xargs); yes | DEBUG='*' npx migrate up --compiler='ts:@deepcase/hasura/compiler/index.js'",
     "unmigrate": "export $(grep -v '^#' .env | xargs); yes | DEBUG='*' npx migrate down --compiler='ts:@deepcase/hasura/compiler/index.js'",
-    "gitpod": "export $(grep -v '^#' .env | xargs); export HASURA_URL=$(gp url 8080); export PORT=3001; npx next dev -p $PORT"
+    "gitpod": "export $(grep -v '^#' .env | xargs); export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; MIGRATIONS_EXAMPLE_URL=$(echo $(gp url 3001) | awk -F[/:] '{print $4}'); export HASURA_PATH=$(echo $(gp url 8080) | awk -F[/:] '{print $4}'); export HASURA_SSL=1; export PORT=3001; npx next dev -p $PORT"
   },
   "dependencies": {
-    "@deepcase/hasura": "^0.0.4",
-    "@deepcase/react-hasura": "^0.0.0",
+    "@deepcase/hasura": "^0.0.6",
+    "@deepcase/react-hasura": "^0.0.1",
     "@deepcase/store": "^0.0.31",
     "apollo-boost": "^0.4.9",
     "apollo-server": "^2.21.0",
