--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@deepcase/react-hasura": "^0.0.1",
     "@deepcase/store": "^0.0.31",
     "@material-ui/core": "^4.11.3",
+    "@react-three/xr": "^2.0.1",
     "apollo-boost": "^0.4.9",
     "apollo-server": "^2.21.0",
     "color-hash": "^1.0.3",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^6.0.2",
+    "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
-    "next": "10.0.7",
+    "next": "^10.0.7",
     "normalize.css": "^8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -35,11 +36,14 @@
     "react-force-graph-3d": "^1.18.9",
     "react-force-graph-ar": "^1.4.6",
     "react-force-graph-vr": "^1.13.6",
+    "react-three-fiber": "^5.3.19",
     "three": "^0.125.2",
     "three-vrcontroller-module": "^1.0.5"
   },
   "devDependencies": {
-    "@types/react": "^17.0.2"
+    "@types/react": "^17.0.2",
+    "dotenv-webpack": "^6.0.2",
+    "webpack": "^4.44.2"
   },
   "engines": {
     "node": "12.13.1"
