https://github.com/deepcase/hasura/issues/1

--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -30,6 +30,6 @@ services:
       HASURA_GRAPHQL_DEV_MODE: "true"
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-      HASURA_GRAPHQL_AUTH_HOOK: "${AUTH_WEBHOOK}"
+      HASURA_GRAPHQL_JWT_SECRET: "${JWT_SECRET}"
 volumes:
   db_data:
