--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "jsonwebtoken": "^8.5.1",
     "next": "^10.0.7",
     "normalize.css": "^8.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-force-graph": "^1.37.6",
     "react-force-graph-2d": "^1.19.0",
     "react-force-graph-3d": "^1.18.9",
