--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "package:unbuild": "rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts",
     "package:publish": "npm run package:build; npm publish --access public; npm run package:unbuild",
     "docker-local": "(export DOCKERHOST=$(ifconfig | grep -E \"([0-9]{1,3}\\.){3}[0-9]{1,3}\" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1); cd ./local; docker-compose up -d)",
-    "gitpod": "((yes | sudo apt install net-tools); export JWT_SECRET='{\"type\":\"HS256\", \"key\": \"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}'; export $(grep -v '^#' .env | xargs); npm run docker-local)",
-    "local": "(export JWT_SECRET='{\"type\":\"HS256\", \"key\": \"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}'; export $(grep -v '^#' .env | xargs); npm run docker-local)"
+    "docker": "(export JWT_SECRET='{\"type\":\"HS256\", \"key\": \"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}'; export $(grep -v '^#' .env | xargs); npm run docker-local)"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
