--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '15.10'
+      - name: env
+        run: |
+          cp .docker.env .env
+          export $(grep -v '^#' .env | xargs);
       - name: Install
         run: npm ci
       - name: Log in to Docker Hub
