--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -32,6 +32,6 @@ services:
       HASURA_GRAPHQL_LOG_LEVEL: "debug"
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-      HASURA_GRAPHQL_JWT_SECRET: "$$JWT_SECRET"
+      HASURA_GRAPHQL_JWT_SECRET: '${JWT_SECRET}'
 volumes:
   db_data:
