--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deepcase/hasura",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "license": "ISC",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deepcase/hasura",
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "^3.4.9",
     "@apollo/react-hooks": "^4.0.0",
+    "@types/node": "^14.17.14",
+    "@types/react": "^17.0.19",
     "apollo-boost": "^0.4.9",
     "apollo-link": "^1.2.14",
     "apollo-link-ws": "^1.0.20",
@@ -19,22 +21,22 @@
     "axios": "^0.21.1",
     "babel-register": "^6.26.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "migrate": "^1.7.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
-    "ts-node": "^9.1.1",
-    "@types/node": "^14.17.14",
-    "@types/react": "^17.0.19"
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1"
   },
   "scripts": {
     "package:build": "npx tsc --project tsconfig.json",
-    "package:unbuild": "rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts",
-    "package:publish": "npm run package:build; npm publish --access public; npm run package:unbuild",
-    "docker-local": "export DOCKERHOST=$(ifconfig | grep -E \"([0-9]{1,3}\\.){3}[0-9]{1,3}\" | grep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1); cd ./local; docker-compose up -d",
-    "docker": "export JWT_SECRET='{\"type\":\"HS256\", \"key\": \"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}'; export $(grep -v '^#' .env | xargs); npm run docker-local"
+    "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts",
+    "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
+    "docker-local": "cd ./local && docker-compose up -d && cd ../",
+    "docker": "cross-env JWT_SECRET='{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}' npm run docker-local"
   },
   "devDependencies": {
     "pre-commit": "^1.2.2",
