--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.6'
 services:
   postgres:
-    image: postgres:12
+    image: clkao/postgres-plv8:latest
     restart: always
     command: postgres -c log_error_verbosity=verbose -c client_min_messages=DEBUG5 -c log_min_messages=DEBUG5 -c log_min_error_statement=DEBUG5 -c log_duration=true
     volumes:
+    - ./init_v8.sql:/docker-entrypoint-initdb.d/init_v8.sql
     - db_data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
@@ -26,6 +27,6 @@ services:
       HASURA_GRAPHQL_LOG_LEVEL: "debug"
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-      HASURA_GRAPHQL_JWT_SECRET: '${JWT_SECRET}'
+      HASURA_GRAPHQL_JWT_SECRET: "{\"type\":\"HS256\", \"key\": \"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}"
 volumes:
   db_data:
