--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deepcase/hasura",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "license": "ISC",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deepcase/hasura",
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "migrate": "^1.7.0",
     "node-fetch": "^2.6.1",
+    "normalize-url": "^7.0.2",
     "path": "^0.12.7",
     "react": "^17.0.1",
     "rimraf": "^3.0.2",
