--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/hasura",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deep-foundation/hasura",
@@ -30,7 +30,8 @@
     "path": "^0.12.7",
     "react": "^17.0.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "ws": "^8.2.3"
   },
   "scripts": {
     "package:build": "npx tsc --project tsconfig.json",
