--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.6'
 services:
   postgres:
     image: postgres:12
+    ports:
+    - "5432:5432"
     restart: always
     command: postgres -c log_error_verbosity=verbose -c client_min_messages=DEBUG5 -c log_min_messages=DEBUG5 -c log_min_error_statement=DEBUG5 -c log_duration=true
     volumes:
@@ -14,13 +16,12 @@ services:
       PGREQUIRESSL: 0
   graphql-engine:
     image: hasura/graphql-engine:v2.0.10
-    ports:
-    - "8080:8080"
+    network_mode: "host"
     depends_on:
     - "postgres"
     restart: always
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
+      HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@localhost:5432/postgres
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
       HASURA_GRAPHQL_DEV_MODE: "true"
       HASURA_GRAPHQL_LOG_LEVEL: "debug"
