--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -33,5 +33,6 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       HASURA_GRAPHQL_JWT_SECRET: '${JWT_SECRET}'
       HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS: "true"
+      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: "link"
 volumes:
   db_data:
