--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "package:build": "npx tsc --project tsconfig.json",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts",
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
-    "docker-local": "cd ./local && docker-compose up -p deep -d && cd ../",
+    "docker-local": "cd ./local && docker-compose -p deep up -d && cd ../",
     "docker": "cross-env JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" npm run docker-local"
   },
   "devDependencies": {
