really delete env from scripts

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts",
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
     "docker-local": "cd ./local && docker-compose -p deep up -d && cd ../",
-    "docker": "JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" npm run docker-local"
+    "docker": "npm run docker-local"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
