--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -11,11 +11,11 @@ services:
     volumes:
     - db_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgrespassword
-      PGGSSENCMODE: disable
-      PGSSLMODE: disable
-      PGREQUIRESSL: 0
+      - 'POSTGRES_USER=postgres'
+      - 'POSTGRES_PASSWORD=postgrespassword'
+      - 'PGGSSENCMODE=disable'
+      - 'PGSSLMODE=disable'
+      - 'PGREQUIRESSL=0'
   graphql-engine:
     image: hasura/graphql-engine:v2.3.1
     networks:
@@ -29,15 +29,15 @@ services:
     - "postgres"
     restart: always
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
-      HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
-      HASURA_GRAPHQL_DEV_MODE: "true"
-      HASURA_GRAPHQL_LOG_LEVEL: "debug"
-      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-      HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-      HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
-      HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS: "true"
-      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: "undefined"
+      - 'HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres'
+      - 'HASURA_GRAPHQL_ENABLE_CONSOLE=true'
+      - 'HASURA_GRAPHQL_DEV_MODE=true'
+      - 'HASURA_GRAPHQL_LOG_LEVEL=debug'
+      - 'HASURA_GRAPHQL_ENABLED_LOG_TYPES=startup, http-log, webhook-log, websocket-log, query-log'
+      - 'HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey'
+      - 'HASURA_GRAPHQL_JWT_SECRET={"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
+      - 'HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=true'
+      - 'HASURA_GRAPHQL_UNAUTHORIZED_ROLE=undefined'
 volumes:
   db_data:
 networks:
