storage hosts fix

--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -48,6 +48,7 @@ services:
     restart: unless-stopped
     ports:
       - '8000:8000'
+    extra_hosts: ['host.docker.internal:host-gateway']
     environment:
       - 'DEBUG=true'
       - 'HASURA_METADATA=1'
