--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-link": "^1.2.14",
     "apollo-link-ws": "^1.0.20",
-    "apollo-server-micro": "^2.26.1",
+    "apollo-server-micro": "^3.11.1",
     "axios": "^0.21.1",
     "babel-register": "^6.26.0",
     "cors": "^2.8.5",
@@ -25,12 +25,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "graphql": "^15.0.0",
+    "micro": "^9.4.1",
     "migrate": "^1.8.0",
     "node-fetch": "^2.6.1",
     "normalize-url": "^7.2.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
+    "subscriptions-transport-ws": "^0.9.19",
     "ts-node": "^9.1.1",
     "ws": "^7.5.9"
   },
