--- a/package.json
+++ b/package.json
@@ -12,27 +12,24 @@
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@apollo/react-hooks": "^4.0.0",
+    "@apollo/server": "^4.3.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
-    "apollo-boost": "^0.4.9",
-    "apollo-link": "^1.2.14",
-    "apollo-link-ws": "^1.0.20",
-    "apollo-server-micro": "^3.11.1",
     "axios": "^1.2.2",
     "babel-register": "^6.26.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "graphql": "^15.8.0",
-    "micro": "^9.4.1",
+    "graphql": "^16.6.0",
+    "graphql-ws": "^5.11.2",
+    "micro": "^10.0.1",
     "migrate": "^1.8.0",
     "node-fetch": "^3.3.0",
     "normalize-url": "^8.0.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
-    "subscriptions-transport-ws": "^0.9.19",
     "ts-node": "^10.9.1",
     "ws": "^8.12.0"
   },
