--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.7.3",
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/server": "^4.3.0",
+    "@as-integrations/next": "^1.2.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "axios": "^1.2.2",
@@ -23,10 +24,12 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.2",
+    "i": "^0.3.7",
     "micro": "^10.0.1",
     "migrate": "^1.8.0",
     "node-fetch": "^3.3.0",
     "normalize-url": "^8.0.0",
+    "npm": "^9.2.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
