--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^16.6.0",
     "migrate": "^1.7.0",
     "node-fetch": "^2.6.1",
     "normalize-url": "^7.0.2",
