--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@apollo/client": "^3.7.4",
+    "@apollo/react-hooks": "^4.0.0",
     "@types/node": "^14.17.14",
     "@types/react": "^17.0.19",
     "apollo-server-micro": "^2.21.0",
