Change license to Unlicense

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@deep-foundation/hasura",
   "version": "0.0.34",
-  "license": "MIT",
+  "license": "Unlicense",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deep-foundation/hasura",
   "repository": {
