Move src files to src folder; update rootDir and outDir in tsconfig; update files in package.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "removeComments": true,
+    "rootDir": "./src",
+    "outDir": "./dist",
     "jsx": "react",
     "module": "commonjs",
     "moduleResolution": "node",
