--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -12,11 +12,11 @@ services:
     volumes:
     - db-data:/var/lib/postgresql/data
     environment:
-      - 'POSTGRES_USER=postgres'
-      - 'POSTGRES_PASSWORD=postgrespassword'
-      - 'PGGSSENCMODE=disable'
-      - 'PGSSLMODE=disable'
-      - 'PGREQUIRESSL=0'
+      - 'POSTGRES_USER=${POSTGRES_USER}'
+      - 'POSTGRES_PASSWORD=${POSTGRES_PASSWORD}'
+      - 'PGGSSENCMODE=${PGGSSENCMODE}'
+      - 'PGSSLMODE=${PGSSLMODE}'
+      - 'PGREQUIRESSL=${PGREQUIRESSL}'
   hasura:
     container_name: deep-hasura
     image: hasura/graphql-engine:v2.3.1
@@ -31,15 +31,15 @@ services:
     - "postgres"
     restart: always
     environment:
-      - 'HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres'
-      - 'HASURA_GRAPHQL_ENABLE_CONSOLE=true'
-      - 'HASURA_GRAPHQL_DEV_MODE=true'
-      - 'HASURA_GRAPHQL_LOG_LEVEL=debug'
-      - 'HASURA_GRAPHQL_ENABLED_LOG_TYPES=startup, http-log, webhook-log, websocket-log, query-log'
-      - 'HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey'
-      - 'HASURA_GRAPHQL_JWT_SECRET={"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
-      - 'HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=true'
-      - 'HASURA_GRAPHQL_UNAUTHORIZED_ROLE=undefined'
+      - 'HASURA_GRAPHQL_DATABASE_URL=${HASURA_GRAPHQL_DATABASE_URL}'
+      - 'HASURA_GRAPHQL_ENABLE_CONSOLE=${HASURA_GRAPHQL_ENABLE_CONSOLE}'
+      - 'HASURA_GRAPHQL_DEV_MODE=${HASURA_GRAPHQL_DEV_MODE}'
+      - 'HASURA_GRAPHQL_LOG_LEVEL=${HASURA_GRAPHQL_LOG_LEVEL}'
+      - 'HASURA_GRAPHQL_ENABLED_LOG_TYPES=${HASURA_GRAPHQL_ENABLED_LOG_TYPES}'
+      - 'HASURA_GRAPHQL_ADMIN_SECRET=${HASURA_GRAPHQL_ADMIN_SECRET}'
+      - 'HASURA_GRAPHQL_JWT_SECRET=${JWT_SECRET}'
+      - 'HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=${HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS}'
+      - 'HASURA_GRAPHQL_UNAUTHORIZED_ROLE=${HASURA_GRAPHQL_UNAUTHORIZED_ROLE}'
   storage:
     container_name: deep-hasura-storage
     image: nhost/hasura-storage:0.2.3
@@ -50,17 +50,17 @@ services:
       - '8000:8000'
     extra_hosts: ['host.docker.internal:host-gateway']
     environment:
-      - 'DEBUG=true'
-      - 'HASURA_METADATA=1'
-      - 'HASURA_ENDPOINT=http://host.docker.internal:8080/v1'
-      - 'HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey'
-      - 'S3_ENDPOINT=http://host.docker.internal:9000'
-      - 'S3_ACCESS_KEY=minioaccesskey'
-      - 'S3_SECRET_KEY=miniosecretkey'
-      - 'S3_BUCKET=default'
-      - 'S3_ROOT_FOLDER=default'
-      - 'POSTGRES_MIGRATIONS=0'
-      - 'POSTGRES_MIGRATIONS_SOURCE=postgres://postgres:postgrespassword@host.docker.internal:5432/postgres?sslmode=disable'
+      - 'DEBUG=${HASURA_STORAGE_DEBUG}'
+      - 'HASURA_METADATA=${HASURA_METADATA}'
+      - 'HASURA_ENDPOINT=${HASURA_ENDPOINT}'
+      - 'HASURA_GRAPHQL_ADMIN_SECRET=${HASURA_GRAPHQL_ADMIN_SECRET}'
+      - 'S3_ENDPOINT=${S3_ENDPOINT}'
+      - 'S3_ACCESS_KEY=${S3_ACCESS_KEY}'
+      - 'S3_SECRET_KEY=${S3_SECRET_KEY}'
+      - 'S3_BUCKET=${S3_BUCKET}'
+      - 'S3_ROOT_FOLDER=${S3_ROOT_FOLDER}'
+      - 'POSTGRES_MIGRATIONS=${POSTGRES_MIGRATIONS}'
+      - 'POSTGRES_MIGRATIONS_SOURCE=${POSTGRES_MIGRATIONS_SOURCE}'
     command: serve
   minio:
     container_name: deep-minio
@@ -73,8 +73,8 @@ services:
       - '9000:9000'
       - '32765:32765'
     environment:
-      - 'MINIO_ROOT_USER=minioaccesskey'
-      - 'MINIO_ROOT_PASSWORD=miniosecretkey'
+      - 'MINIO_ROOT_USER=${MINIO_ROOT_USER}'
+      - 'MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}'
     entrypoint: sh
     command: '-c ''mkdir -p /export/default && /opt/bin/minio server --address 0.0.0.0:9000 --console-address 0.0.0.0:32765 /export'''
 volumes:
