--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,16 +1,19 @@
-name: NPM Publish
+name: Npm Publish
 
 on:
-  workflow_dispatch:
   push:
     branches:
-      - 'main'
+      - main
     paths:
-      - 'package.json'
+      - package.json
+      - .github/workflows/npm-publish.yml
+  workflow_dispatch:
 
-      
 jobs:
   main:
     uses: deep-foundation/workflows/.github/workflows/npm-publish.yml@main
     secrets:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      npm-token: ${{ secrets.NPM_TOKEN }}
+    with:
+      build-command: "npm run package:build"
+      test-command: "echo 'Tests are temporarely disabled'"
