--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "pre-commit": "^1.2.2",
-    "typescript": "^5.0.4"
+    "typescript": "5.0.4"
   }
 }
