--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -2,7 +2,7 @@ name: Npm Build
 
 on:
   pull_request:
-    types: [opened, reopened, edited]
+    types: [opened, reopened, edited, synchronize]
   workflow_dispatch:
 
 jobs:
