--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,6 +11,8 @@ on:
 
 jobs:
   main:
-    uses: deep-foundation/workflows/.github/workflows/npm-publish.yml@main
+    uses: deep-foundation/workflows/.github/workflows/npm-publish.yml@npm-publish-1.1.0
     secrets:
       npm-token: ${{ secrets.NPM_TOKEN }}
+    with:
+      generate-documentation-command: "npx typedoc --out ./docs --entryPointStrategy expand ./*.tsx"
