--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,4 +15,7 @@ jobs:
     secrets:
       npm-token: ${{ secrets.NPM_TOKEN }}
     with:
+      build-command: "npm run package:build"
+      test-command: "echo 'Tests are temporarily disabled'"
+      should-generate-documentation: true
       generate-documentation-command: "npx typedoc --out ./docs --entryPointStrategy expand ./*.tsx"
